synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: slidingsync
      port: 8009
      targetPort: slidingsync
  selector:
    app.kubernetes.io/component: synapse
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/name: matrix-synapse
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse-replication
  labels:
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/name: matrix-synapse
spec:
  type: ClusterIP
  ports:
    - port: 9093
      targetPort: replication
      protocol: TCP
      name: replication
  selector:
    app.kubernetes.io/component: synapse
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/name: matrix-synapse
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse-generic-worker
  labels:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: matrix-synapse
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: listener
      protocol: TCP
      name: listener
  selector:
    app.kubernetes.io/component: generic-worker
    app.kubernetes.io/instance: matrix-synapse
    app.kubernetes.io/name: matrix-synapse
